@@ -205,3 +205,5 @@ May 19,2000
  - fixed <Ctrl-H> in text editor
 ------ omnetpp-2.0b4 released ------
 ------ omnetpp-2.0b5 released ------
+July 17, 2000
+ - accepts NED files on the command line
